--- a/css/country.css
+++ b/css/country.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
 * {
@@ -743,62 +742,149 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin: 0.2rem 0.4125rem 0 0;
 }
 
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  height: 3.4375rem;
+.side-nav {
+  position: absolute;
+  top: 40.625rem;
+  left: 3.75rem;
+  padding: 50px 40px;
+  min-height: 30rem;
+  z-index: 3;
+  background: #0B327D;
 }
 
-.nav__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media only screen and (max-width: 1800px) {
+  .side-nav {
+    left: 1rem;
+  }
 }
 
-.nav__link {
-  margin: 0.75rem 1.875rem 0.75rem 0;
-  border-right: 1px solid rgba(74, 88, 114, 0.7);
-  padding: 0.3125rem 1.875rem 0px 0px;
-  color: #2C2C2C;
+@media only screen and (max-width: 1700px) {
+  .side-nav {
+    display: none;
+  }
+}
+
+.side-nav__list {
   font-size: 1.125rem;
+  font-weight: 500;
+}
+
+.side-nav__item {
+  margin-bottom: 1rem;
+}
+
+.side-nav__link:hover {
+  opacity: 1;
+  border-bottom: 2px solid #EB0202;
+}
+
+.side-nav__link {
+  color: #F0F8F7;
+  opacity: 0.65;
+}
+
+.side-nav .side-nav__link ~ .active {
+  opacity: 1;
+  border-bottom: 2px solid #EB0202;
+}
+
+.import {
+  background: #0B327D;
+  padding: 6.25rem 0;
+  margin-top: 2.5rem;
+  color: #F0F8F7;
+}
+
+.import__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
-.nav__link:hover {
-  color: #0B327D;
+.import__content-wrap {
+  max-width: 25rem;
 }
 
-.nav__link:last-child {
-  border-right: none;
+.import__title {
+  font-size: 1.875rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
 }
 
-.nav__item:hover {
-  border-bottom: 0.1875rem solid #F70046;
-  border-radius: 3%;
+.import__item {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 190%;
 }
 
-.calculation {
+.import__item span {
+  font-weight: 600;
+}
+
+.import__table-title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 1.25rem;
+}
+
+.import__table {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.import__table-th {
+  padding: 0rem 0.3125rem;
+  background: #E98C00;
+  width: 193px;
+  height: 32px;
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.import__table-td {
+  padding: 0rem 1.25rem;
+  width: 12rem;
+  height: 32px;
+  font-size: 0.6rem;
+  font-weight: 500;
+  text-align: center;
+  line-height: 110%;
+}
+
+.import__table-td--last {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.import__table-td:first-child {
+  text-align: left;
+}
+
+.import tr {
+  background: #9DBFFF;
+}
+
+.import tr:nth-child(even) {
+  background: #C6D9FF;
+}
+
+.from-germany {
   position: relative;
-  background: url("../img/bg.jpg") center top/cover no-repeat;
+  background: url("../img/ship_bg.jpg") center top/cover no-repeat;
   height: auto;
   padding: 7.5rem 0;
-  margin-top: 6.25rem;
+  margin-top: 8.25rem;
 }
 
-.calculation__text-wrap {
-  padding: 2rem 0 3rem;
+.from-germany__text-wrap {
+  padding: 2rem 0 7rem;
   max-width: 42rem;
 }
 
-.calculation__title {
+.from-germany__title {
   font-size: 3.75rem;
   color: #F0F8F7;
   font-weight: 700;
@@ -806,55 +892,21 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin-bottom: 1.875rem;
 }
 
-.calculation__text {
-  font-size: 1rem;
+.from-germany__text {
+  font-size: 1.25rem;
   color: #F0F8F7;
-  max-width: 28.25rem;
-  font-weight: 300;
+  max-width: 22.20rem;
+  font-weight: 500;
   line-height: 156%;
 }
 
-.calculation__select-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+.from-germany__from {
+  background: #F0F8F7;
+  padding: 7px 10px;
+  max-width: 12rem;
 }
 
-.calculation__select {
-  margin-right: 1.25rem;
-  height: 1.625rem;
-  width: 11.25rem;
-  padding: 0 0.625rem;
-  font-size: 0.75rem;
-  color: #2C2C2C;
-  position: relative;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-}
-
-.calculation__select::after {
-  content: "▼";
-  padding: 0 8px;
-  font-size: 12px;
-  position: absolute;
-  right: 8px;
-  top: 4px;
-  z-index: 1;
-  text-align: center;
-  width: 10%;
-  height: 100%;
-  pointer-events: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.calculation__btn {
+.from-germany__btn {
   padding: 0.8rem 1rem;
   background: #EB0202;
   font-size: 1.125rem;
@@ -866,21 +918,21 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   transition: 0.2s;
 }
 
-.calculation__btn:hover {
+.from-germany__btn:hover {
   -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
           filter: drop-shadow(0px 0px 10px #EC3737);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
-.calculation__btn:active {
+.from-germany__btn:active {
   -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
           box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
-.calculation__info-block {
+.from-germany__info-block {
   height: auto;
   max-width: 37rem;
   padding: 2rem 1.1rem 2rem 2rem;
@@ -889,18 +941,18 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin-top: 1.25rem;
 }
 
-.calculation__info-title {
+.from-germany__info-title {
   font-size: 1.875rem;
   font-weight: 600;
 }
 
-.calculation__info-text {
+.from-germany__info-text {
   margin: 1.75rem 0 2rem;
 }
 
 .about {
   position: relative;
-  padding: 50px 0;
+  padding: 50px 0 0;
 }
 
 .about__row {
@@ -930,6 +982,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
+  margin-right: -5rem;
 }
 
 .about__title {
@@ -1064,15 +1117,167 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin-top: 0.65rem;
   color: #0B327D;
   font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .about__mail {
   font-size: 0.9rem;
   color: #0B327D;
   font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about__mail:before {
+  display: block;
+  content: ' ';
+  background-image: url("../img/mail-blue.svg");
+  background-size: 1.0625rem 0.8125rem;
+  height: 0.8125rem;
+  width: 1.0625rem;
+  margin: 0.22rem 0.4125rem 0 0;
+}
+
+.about__tel:before {
+  display: block;
+  content: ' ';
+  background-image: url("../img/tel.svg");
+  background-size: 1rem 1rem;
+  height: 1rem;
+  width: 1rem;
+  margin: 0.2rem 0.4125rem 0 0;
 }
 
 .about__img-manager {
   margin-left: 6rem;
 }
-/*# sourceMappingURL=style.css.map */
+
+.imp-exp {
+  position: relative;
+  padding: 0 0 3rem;
+}
+
+.imp-exp__plunk {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 36%;
+  background: #0B327D;
+  height: 3.2rem;
+  z-index: -1;
+}
+
+.imp-exp__title {
+  color: #F0F8F7;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-top: 0.8rem;
+}
+
+.imp-exp__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.imp-exp__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 12rem;
+}
+
+.imp-exp__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #fff;
+  color: #0B327D;
+  border: 1px solid #0B327D;
+  font-weight: 400;
+  min-width: 11rem;
+  margin-bottom: 1.3rem;
+  min-height: 2.5rem;
+}
+
+.imp-exp__btn:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#EB0202), to(#9F0202));
+  background: linear-gradient(180deg, #EB0202 0%, #9F0202 100%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  border: none;
+  color: #F0F8F7;
+  font-weight: 500;
+}
+
+.imp-exp__btn:active {
+  border: none;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EB0202), to(#9F0202));
+  background: linear-gradient(180deg, #EB0202 0%, #9F0202 100%);
+  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  color: #F0F8F7;
+  font-weight: 500;
+}
+
+.imp-exp__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.imp-exp__item {
+  position: relative;
+  margin: 0  0 2.5rem 2.5rem;
+}
+
+.imp-exp__link-cap {
+  position: absolute;
+  left: 0;
+  background: #0B327D;
+  bottom: -0.8rem;
+  height: 2.2rem;
+  width: 12.5rem;
+  color: #F0F8F7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.imp-exp__img {
+  -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+}
+/*# sourceMappingURL=country.css.map */
