--- a/scss/_nullstyles.scss
+++ b/scss/_nullstyles.scss
@@ -65,6 +65,7 @@ $fontfamily: 'Raleway', sans-serif;
 $colord: #2C2C2C;
 $colorw: #F0F8F7;
 $pryme-color: #0B327D;
+$main-color: #031F66;
 $accent-color: #EB0202;
 //<ПЕРЕМЕННЫЕ>===========================================================================================================
 $minwidth: 320px;
