--- a/css/country.css
+++ b/css/country.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -996,15 +997,15 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
 
 .about__title::before {
   content: "01";
-  font-size: 150px;
-  font-weight: 400;
+  font-size: 210px;
+  font-weight: 900;
   position: absolute;
-  letter-spacing: 0.4rem;
-  top: 3.125rem;
-  left: -9rem;
-  font-family: 'Staatliches', cursive;
+  letter-spacing: -0.7rem;
+  top: 2.125rem;
+  left: -11rem;
+  font-family: 'Roboto', sans-serif;
   opacity: 0.1;
-  color: transparent;
+  color: #0B327D;
   -webkit-text-stroke: 3px #0B327D;
 }
 
@@ -1284,6 +1285,8 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
 .route {
   background: #0B327D;
   padding: 3.2rem 0;
+  position: relative;
+  height: auto;
 }
 
 .route__wrapper {
@@ -1296,12 +1299,28 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   font-size: 2.5rem;
   font-weight: 600;
   color: #F0F8F7;
+  position: relative;
+  margin-top: 2rem;
+}
+
+.route__title::before {
+  content: "02";
+  font-size: 220px;
+  font-weight: 900;
+  position: absolute;
+  letter-spacing: -0.3rem;
+  top: 2.125rem;
+  left: -12.5rem;
+  font-family: 'Roboto', sans-serif;
+  opacity: 0.1;
+  color: #F0F8F7;
+  z-index: 2;
 }
 
 .route .tabs {
   position: relative;
   margin: 3rem 0;
-  min-height: 20rem;
+  min-height: 30rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1326,6 +1345,10 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin-right: 0.7rem;
 }
 
+.route .tab:first-child {
+  margin-left: 6rem;
+}
+
 .route .tab-switch {
   display: none;
 }
@@ -1334,7 +1357,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   position: relative;
   display: block;
   line-height: 2.75em;
-  height: 3.5em;
+  height: 3em;
   padding: 0 1.618em;
   background: #F0F8F7;
   display: -webkit-box;
@@ -1374,8 +1397,11 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   left: 0;
   padding: 1.618rem 1.618rem 1.618rem 0;
   color: #F0F8F7;
-  border-bottom: 0.25rem solid #bdc3c7;
   opacity: 0;
+}
+
+.route .tab-content__wrap:last-child {
+  margin-left: 7.5rem;
 }
 
 .route .tab-content__title {
@@ -1384,9 +1410,106 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   margin: 3rem 0 1rem;
 }
 
+.route .tab-content__sub-title {
+  color: #0B327D;
+  font-size: 1.6rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.5rem;
+}
+
 .route .tab-content p {
-  font-size: 14px;
+  font-size: 0.875rem;
   max-width: 42.5rem;
+  margin-top: 0.5rem;
+}
+
+.route .tab-content__advantages {
+  background: #F0F8F7;
+  width: 100%;
+  height: auto;
+  padding: 2.5rem 3.125rem 5rem;
+  margin-top: 6.25rem;
+}
+
+.route .tab-content__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.route .tab-content__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 1.25rem 0.3125rem 0.3125rem;
+  width: 8.75rem;
+  height: 8.75rem;
+  margin-right: 1.25rem;
+  font-size: 0.8rem;
+  -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+  text-align: center;
+  line-height: 100%;
+}
+
+.route .tab-content__item--plus {
+  background: #0B327D;
+}
+
+.route .tab-content__item--minus {
+  background: #F0F8F7;
+  color: #0B327D;
+}
+
+.route .tab-content__plus {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.route .tab-content__minus {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.route .tab-content__icon-wrap {
+  width: 4.375rem;
+  height: 4.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.route .tab-content__icon {
+  margin-bottom: 0.25rem;
+}
+
+.route .tab-content__sm-text {
+  font-size: 0.65rem;
 }
 
 .route .tab-switch:checked + .tab-label {
@@ -1422,5 +1545,284 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
   opacity: 1;
   -webkit-transition: all 0.35s;
   transition: all 0.35s;
+}
+
+.pricing {
+  background: #031F66;
+  padding: 12.5rem 0 3.125rem;
+  color: #F0F8F7;
+}
+
+.pricing__text {
+  margin-top: 2rem;
+  max-width: 45.5rem;
+}
+
+.pricing__table-wrap {
+  background: #F0F8F7;
+  padding: 1.8rem 3rem;
+  margin: 6rem 0 1.25rem;
+}
+
+.pricing__table {
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 25rem;
+}
+
+.pricing__table-th {
+  padding: 0rem 0.3125rem;
+  background: #E98C00;
+  width: 193px;
+  height: 32px;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.pricing__table-td {
+  padding: 0rem 1.25rem;
+  width: 12rem;
+  height: 32px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-align: center;
+  line-height: 110%;
+}
+
+.pricing__table-td--last {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.pricing tr {
+  background: #9DBFFF;
+}
+
+.pricing tr:nth-child(even) {
+  background: #C6D9FF;
+}
+
+.pricing__sm-text {
+  font-size: 0.8rem;
+}
+
+.pricing__sub-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 2rem 0 1.2rem;
+}
+
+.pricing__list {
+  margin-left: 1.25rem;
+}
+
+.pricing__list li {
+  list-style-type: square;
+  font-weight: 400;
+  line-height: 180%;
+}
+
+.pricing__spec-title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 4rem 0 1.5rem;
+}
+
+.pricing__spec-text {
+  margin-top: 1rem;
+  max-width: 45rem;
+}
+
+.pricing__map {
+  margin-top: 3.2rem;
+  width: 100%;
+}
+
+.transport {
+  background: #F0F8F7;
+  height: 200px;
+}
+
+.questions {
+  background: #0B327D;
+  padding: 40px;
+  height: auto;
+  position: relative;
+}
+
+.questions__title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 3.2rem 0;
+  color: #F0F8F7;
+  position: relative;
+}
+
+.questions__title::before {
+  content: "04";
+  font-size: 220px;
+  font-weight: 900;
+  position: absolute;
+  letter-spacing: -0.3rem;
+  top: 2.125rem;
+  left: -12.5rem;
+  font-family: 'Roboto', sans-serif;
+  opacity: 0.1;
+  color: #F0F8F7;
+  z-index: 2;
+}
+
+.questions .accordion {
+  max-width: 55rem;
+  margin: 0 auto;
+}
+
+.questions .accordion__item {
+  margin: 5px auto;
+  border-bottom: 1px solid #F0F8F7;
+  padding: 5px 0;
+}
+
+.questions .accordion__item .accordion__title {
+  position: relative;
+  display: block;
+  padding: 13px 60px 15px 0;
+  margin-bottom: 2px;
+  color: #F0F8F7;
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-decoration: none;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+  cursor: pointer;
+}
+
+.questions .accordion__item .accordion__title:hover {
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+.questions .accordion__item .accordion__title:active {
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  padding: 13px 60px 15px 13px;
+}
+
+.questions .accordion__item .accordion-active {
+  background: rgba(20, 143, 182, 0.3);
+  padding: 13px 60px 15px 13px;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.questions .accordion__item .accordion__title .accordion__arrow {
+  position: absolute;
+  top: 13px;
+  right: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  color: #fff;
+  line-height: 30px;
+  font-size: 1.75rem;
+  font-weight: 700;
+  margin-right: 5px;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.questions .accordion__item .accordion__rotate {
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.questions .accordion__item .accordion__content {
+  padding: 30px;
+  margin-bottom: 2px;
+  font-size: 1.2rem;
+  font-weight: 300;
+  display: none;
+  color: #F0F8F7;
+  background: rgba(20, 143, 182, 0.3);
+}
+
+.questions .accordion__content ul {
+  margin-left: 1rem;
+}
+
+.questions .accordion__content li {
+  list-style-type: disc;
+}
+
+.questions .accordion__item .accordion__arrow-item {
+  font-weight: 700;
+}
+
+.docs {
+  color: #0B327D;
+  padding: 3rem 0;
+}
+
+.docs__title {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.docs__sub-title {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin: 2.5rem 0 2rem;
+}
+
+.docs__cap {
+  font-size: 1.15rem;
+  font-weight: 600;
+  margin-left: 0.85rem;
+  margin-bottom: 1.5rem;
+}
+
+.docs__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.docs__list {
+  margin-left: 2rem;
+  border-right: 1px solid #0B327D;
+}
+
+.docs__list--2 {
+  border-right: none;
+}
+
+.docs__items {
+  list-style-type: square;
+  margin-bottom: 0.8rem;
+  max-width: 30rem;
+}
+
+.docs__link {
+  text-decoration: underline;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 80%;
+  color: #0B327D;
+}
+
+.docs__import {
+  width: 50%;
+}
+
+.docs__export {
+  width: 50%;
 }
 /*# sourceMappingURL=country.css.map */
