--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -1038,7 +1038,7 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
       width: 100%;
       height: auto;
       padding: 2.5rem 3.125rem 5rem;
-      margin-top: 6.25rem;
+      margin-top: 3.25rem;
   }
   &__row {
       display: flex;
@@ -1118,40 +1118,49 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
 }
 
 .pricing {
-    padding: 12.5rem 0 3.125rem;
+    padding: 10rem 0 3.125rem;
     color: $colorw;
     &__text {
-        margin-top: 2rem;
+        margin: 2rem 0 3rem;
         max-width: 45.5rem;
     }
+    &__footnote {
+        font-family: $fontfamily;
+        font-size: 0.75rem;
+        margin: 0.5rem 0 5rem;
+    }
     &__table-wrap {
-        margin: 6rem 0 1.25rem;
+        margin: 2rem 0 1.25rem;
     }
     &__table {
         color: #ffffff;
         font-family: $font-alt;
-        margin-bottom: 5rem;
     }
     &__table-th {
-        padding: 0rem 0.3125rem;
-        background: #E98C00;
-        width: 193px;
-        height: 32px;
+        padding: 0.75rem 1.5rem;
+        background: #2AABC1;
+        width: auto;
+        min-height: 2.25rem;
         font-size: 1rem;
         font-weight: 600;
     }
     &__table-td {
-        padding: 0rem 1.25rem;
-        width: 12rem;
-        height: 32px;
+        padding: 0rem 1.5rem;
+        width: auto;
+        height: 2.25rem;
         font-size: 0.75rem;
-        font-weight: 500;
+        font-weight: 600;
         text-align: center;
         line-height: 110%;
+        color: $main-color;
         &--last {
             font-size: 12px;
             font-weight: 700;
         }
+    }
+    &__table-td:first-child {
+        text-align: left;
+        justify-content: left;
     }
     tr {
         background: #9DBFFF;
@@ -1166,6 +1175,12 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
         font-size: 1.5rem;
         font-weight: 600;
         margin: 2rem 0 1.2rem;
+    }
+    &__table-cap {
+        font-size: 1.25rem;
+        font-weight: 600;
+        font-family: $font-alt;
+        margin-bottom: 1.25rem;
     }
     &__list {
         margin-left: 1.25rem;
@@ -1419,13 +1434,16 @@ html.no-js li:hover > a + ul, html.no-js li:focus > a + ul {
     }
     .slick-dots {
         bottom: -35px;
+        color: inherit;
     }
     .slick-dots li {
         background: $pryme-alt;
         border-radius: 50%;
+        color: inherit;
     }
     .slick-dots li + .slick-active {
         background: $main-color;
+        color: inherit;
     }
 }
 
